Add optional class.students via include
